# Azazel-Fabric

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adoption-guide.md  architecture.md  contracts.md  design-principles.md  issue-breakdown.md  migration-plan.md  repository-layout.md
src/azazel_common/: __init__.py  version.py
src/azazel_common/cti_contracts/: __init__.py  advisory.py  context.py  ingest.py  reactions.py
src/azazel_common/schema/: __init__.py  action.py  decision.py  state.py
src/azazel_common/view/: __init__.py  build.py  status.py
src/azazel_covenant/: __init__.py
src/azazel_covenant/cti_contracts/: __init__.py  context.py  ingest.py  reactions.py
src/azazel_covenant/schema/: __init__.py  action.py  audit.py  decision.py  mode.py  state.py
src/azazel_covenant/view/: __init__.py  build.py  status.py
src/azazel_fabric/: __init__.py  version.py
src/azazel_fabric/api/: __init__.py  auth.py  errors.py  roles.py
src/azazel_fabric/audit/: __init__.py  events.py  jsonl.py
src/azazel_fabric/cti_contracts/: __init__.py  context.py  ingest.py  reactions.py
src/azazel_fabric/notify/: __init__.py  model.py  transports.py
src/azazel_fabric/paths/: __init__.py  migration.py  schema.py
src/azazel_fabric/schema/: __init__.py  action.py  decision.py  evidence.py  state.py  trust.py
src/azazel_fabric/testing/: __init__.py  factories.py  invariants.py
src/azazel_fabric/view/: __init__.py  build.py  status.py
tests/: test_api.py  test_audit.py  test_cti_contracts.py  test_notify.py  test_paths.py  test_schema_decision.py  test_schema_records.py  test_schema_state.py  test_testing_module.py  test_view_status.py
