[project]
name = "azazel-covenant"
dynamic = ["version"]
description = "Shared contracts for the Azazel series (schema, CTI advisory contract, audit/path/api/notify helpers)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "01rabbit" }]
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
flask = ["flask>=2"]
fastapi = ["fastapi>=0.100"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/01rabbit/Azazel-Covenant"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "azazel_covenant.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
