[project]
name = "azazel-fabric"
dynamic = ["version"]
description = "Azazel-Fabric Contract: shared contracts and interoperability foundation for the Azazel System (formerly Azazel-Common)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "01rabbit" }]
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
flask = ["flask>=2"]
fastapi = ["fastapi>=0.100"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/01rabbit/Azazel-Fabric"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "azazel_fabric.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
